--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -67,7 +67,7 @@ Dictionary Online</pre>
                     <li class="nav-item">
                         <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#AboutBox"
                            role="button"
-                           aria-expanded="false" aria-controls="AboutBox">About</a>
+                           aria-expanded="false" aria-controls="AboutBox">About us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#HelpBox"
