replace a comma in help

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -109,7 +109,7 @@ Dictionary Online</pre>
                         <p style="font-weight: bold; color: rgba(0,0,0,0.64)">In the name of Allah</p>
                         <p>
                             You can search words inside trie in search word tab.
-                            if word existed translation, will be shown else not, a warning alerts you that word doesn't
+                            if word existed, translation will be shown else not, a warning alerts you that word doesn't
                             exists in trie.
                             this way you can add word in add word tab. if word added successfully or not, a message
                             reports that.
