--- a/main/templates/main/add_result.html
+++ b/main/templates/main/add_result.html
@@ -11,7 +11,6 @@
             background-color: rgba(240, 248, 255, 0.55);
             box-shadow: rgba(255, 0, 0, 0.32) 0 3px 90px 10px;
         }
-
         .main-card:hover {
             transform: translateY(-4px);
             background-color: rgba(227, 231, 250, 0.92);
@@ -39,7 +38,6 @@
             transition: 0.5s;
             border-radius: 6px;
         }
-
         li:hover {
             border-bottom: none;
             background-color: rgba(227, 231, 250, 0.96);
@@ -49,29 +47,38 @@
         .form-control:focus {
             box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.0) inset, 0px 0px 8px rgba(255, 100, 255, 0.0);
         }
-        .success_message {
-            border: 2px solid rgb(5, 127, 99);
-            background-color: rgba(0, 0, 0, 0);
-            height: 2.2rem;
-            transition: 0.3s;
-            color: rgb(7, 63, 50);
+
+        .message {
+            height: 60px;
+            border: none;
+            background: none;
+        }
+        .success_alert {
+          color: white;
+          padding: 18px;
+          border-radius: 12px;
+          background-color: rgba(11, 111, 2, 0.8);
+        }
+        .fail-alert {
+            color: white;
+            padding: 18px;
+            border-radius: 12px;
+            background-color: rgba(220, 6, 6, 0.8);
+        }
+        .closebtn {
+          color: white;
+          float: right;
+          font-size: 22px;
+          cursor: pointer;
+          transition: 0.3s;
+          line-height: 20px;
+          margin-left: 15px;
+          font-weight: bold;
+        }
+        .closebtn:hover {
+          color: black;
         }
 
-        .success_message:hover {
-            background-color: rgb(158, 255, 235, 0.5);
-        }
-
-        .fail_message {
-            border: 2px solid rgb(127, 5, 33);
-            background-color: rgba(0, 0, 0, 0);
-            height: 2.2rem;
-            transition: 0.3s;
-            color: rgb(55, 6, 18);
-        }
-
-        .fail_message:hover {
-            background-color: rgba(255, 128, 184, 0.5);
-        }
     </style>
 {% endblock %}
 
@@ -170,15 +177,21 @@ Dictionary Online</pre>
                             </div>
                         </form>
                         {% if result %}
-                            <div class="success_message card">
-                                <div class="card-body fs-6 py-1">
-                                    '{{ word }}' added to trie successfully!
+                            <div class="message card">
+                                <div class="card-body fs-6 py-0">
+                                    <div class="success_alert">
+                                          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                                            '{{ word }}' added to trie successfully!
+                                    </div>
                                 </div>
                             </div>
                         {% else %}
-                            <div class="fail_message card">
-                                <div class="card-body fs-6 py-1">
-                                    '{{ word }}' already exists.
+                            <div class="message card">
+                                <div class="card-body fs-6 py-0">
+                                    <div class="fail-alert">
+                                          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                                            '{{ word }}' already exists.
+                                    </div>
                                 </div>
                             </div>
                         {% endif %}
